# GooeyDE

./: CMakeCache.txt  CMakeLists.txt  README.md  canvas_test  gooey_session  gooey_shell  gooey_shell.c  gooey_shell.h  gooeyde.desktop  gooeyde_appmenu  gooeyde_desktop  gooeyde_start  gooeyde_systemsettings  gooeyde_taskbar  gooeyde_taskbar.c  install  install_on_sys  installer.sh  main.c  test.sh
components/: gooey_shell.c  gooey_shell.h  gooey_shell_config.c  gooey_shell_config.h  gooey_shell_core.h  gooey_shell_tiling.c  gooey_shell_tiling.h  gooeyde_appmenu.c  gooeyde_config.c  gooeyde_desktop.c  gooeyde_systemsettings.c
components/utils/: devices_helper.h  resolution_helper.h
website/: index.html
